--- a/_tweets-md/2008/2008-01-01-tweets.md
+++ b/_tweets-md/2008/2008-01-01-tweets.md
@@ -1,6 +1,13 @@
+---    
+title: "Social Media - January"
+date: "2008-01-31"
+time: 23:59:59 +0000
+---
+
+
 > Any of my followers know of good expert on web advertising sales? I have a site with 20M+ page views, but can't afford full time salesman.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 02 03:38:12 +0000 2008](https://twitter.com/ChristopherA/status/553936722)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 02 03:38:12 +0000 2008](https://twitter.com/ChristopherA/status/553936722)
 
 ----
 
@@ -8,7 +15,7 @@ Replying to [@allaboutgeorge](https://twitter.com/allaboutgeorge/status/55393416
 
 > Hope to see you at @BerkeleyCowork soon!
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 02 03:48:51 +0000 2008](https://twitter.com/ChristopherA/status/553957882)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 02 03:48:51 +0000 2008](https://twitter.com/ChristopherA/status/553957882)
 
 ----
 
@@ -16,7 +23,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/553940862)
 
 > Check out [http://www.rpg.net/ads/info.phtml](http://www.rpg.net/ads/info.phtml) for more details and demongraphics of RPGnet and Xenagia.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 02 03:50:17 +0000 2008](https://twitter.com/ChristopherA/status/553960792)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 02 03:50:17 +0000 2008](https://twitter.com/ChristopherA/status/553960792)
 
 ----
 
@@ -24,19 +31,19 @@ Replying to [@scobleizer](https://twitter.com/Scobleizer/status/553960842)
 
 > What I really want is a smaller non-SLR camera that shoots RAW.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 02 03:51:09 +0000 2008](https://twitter.com/ChristopherA/status/553962282)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 02 03:51:09 +0000 2008](https://twitter.com/ChristopherA/status/553962282)
 
 ----
 
 > I agree with @brianshaler -- it feels like Monday morning even though the calendar says Wednesday.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 02 16:40:00 +0000 2008](https://twitter.com/ChristopherA/status/555535602)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 02 16:40:00 +0000 2008](https://twitter.com/ChristopherA/status/555535602)
 
 ----
 
 > My #themeword "Touched"
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 03 10:38:34 +0000 2008](https://twitter.com/ChristopherA/status/557969232)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 03 10:38:34 +0000 2008](https://twitter.com/ChristopherA/status/557969232)
 
 ----
 
@@ -44,7 +51,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/560210432)
 
 > Not worth $143 to Santa Barbara -- I've taken that train a number of times and it isn't that long of a trip. First class might be ok
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 04 01:35:11 +0000 2008](https://twitter.com/ChristopherA/status/560280322)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 04 01:35:11 +0000 2008](https://twitter.com/ChristopherA/status/560280322)
 
 ----
 
@@ -52,7 +59,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/560304272)
 
 > I believe that AMTRAK first class might have airplane-style power, and it isn't much more in price. Worth investigating.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 04 01:46:25 +0000 2008](https://twitter.com/ChristopherA/status/560309982)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 04 01:46:25 +0000 2008](https://twitter.com/ChristopherA/status/560309982)
 
 ----
 
@@ -60,7 +67,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/560314362)
 
 > Odd. It has been a couple of years since I took it (Crypto conf is in August in Santa Barbara). But it may be worth phone call
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 04 01:53:04 +0000 2008](https://twitter.com/ChristopherA/status/560327252)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 04 01:53:04 +0000 2008](https://twitter.com/ChristopherA/status/560327252)
 
 ----
 
@@ -68,13 +75,13 @@ Replying to [@ev](https://twitter.com/ev/status/560708972)
 
 > Have to tried Toodledo.com yet? I found it superior to Todoist.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 04 06:29:57 +0000 2008](https://twitter.com/ChristopherA/status/561004932)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 04 06:29:57 +0000 2008](https://twitter.com/ChristopherA/status/561004932)
 
 ----
 
 > I woke early this morning to the sounds of daunting rainstorm, with driving sheets of rain. Makes heading to YMCA for exercise intimidating.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 04 15:13:02 +0000 2008](https://twitter.com/ChristopherA/status/562185102)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 04 15:13:02 +0000 2008](https://twitter.com/ChristopherA/status/562185102)
 
 ----
 
@@ -82,13 +89,13 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/562241782)
 
 > I like ShedRain brain of umbrellas. They sell them at REI. Open with a snap, close with a snap, and wind blowout resistant.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 04 15:34:21 +0000 2008](https://twitter.com/ChristopherA/status/562252252)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 04 15:34:21 +0000 2008](https://twitter.com/ChristopherA/status/562252252)
 
 ----
 
 > On way to pick up @factoryjoe at Ashby BART to keep him from having to walk through the driving rain to #berkeleycoworking.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 04 18:56:44 +0000 2008](https://twitter.com/ChristopherA/status/562856712)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 04 18:56:44 +0000 2008](https://twitter.com/ChristopherA/status/562856712)
 
 ----
 
@@ -96,13 +103,13 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/562850842)
 
 > Weird, whenever I've gone to Santa Barbarba it is on the Coast Starlight. No wonder it is going to take you so many hours.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 04 18:57:54 +0000 2008](https://twitter.com/ChristopherA/status/562859952)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 04 18:57:54 +0000 2008](https://twitter.com/ChristopherA/status/562859952)
 
 ----
 
 > #whatistwitter Twitter is a view upon a group stream of consciousness.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jan 08 00:38:27 +0000 2008](https://twitter.com/ChristopherA/status/573697712)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 08 00:38:27 +0000 2008](https://twitter.com/ChristopherA/status/573697712)
 
 ----
 
@@ -110,7 +117,7 @@ Replying to [@NancyWhite](https://twitter.com/NancyWhite/status/576785222)
 
 > Too bad your event is at the same time as MacWorld in SF, otherwise I'd consider it.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jan 08 21:24:17 +0000 2008](https://twitter.com/ChristopherA/status/577113742)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 08 21:24:17 +0000 2008](https://twitter.com/ChristopherA/status/577113742)
 
 ----
 
@@ -118,7 +125,7 @@ Replying to [@dweinberger](https://twitter.com/dweinberger/status/576951992)
 
 > There are a couple of tools out there that combine Last.FM and Pandora. All platforms [http://pandorafm.real-ity.com/](http://pandorafm.real-ity.com/)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jan 08 21:26:30 +0000 2008](https://twitter.com/ChristopherA/status/577120182)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 08 21:26:30 +0000 2008](https://twitter.com/ChristopherA/status/577120182)
 
 ----
 
@@ -126,7 +133,7 @@ Replying to [@dweinberger](https://twitter.com/dweinberger/status/576951992)
 
 > Mac specific, there is PandoraJam and I think there are a few more.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jan 08 21:28:39 +0000 2008](https://twitter.com/ChristopherA/status/577126402)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 08 21:28:39 +0000 2008](https://twitter.com/ChristopherA/status/577126402)
 
 ----
 
@@ -134,7 +141,7 @@ Replying to [@factoryjoe](https://twitter.com/chrismessina/status/577565792)
 
 > Wish I could make to the Media Web Meetup tonight. I look forward to someone summarizing tomorrow.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 09 00:22:45 +0000 2008](https://twitter.com/ChristopherA/status/577630972)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 09 00:22:45 +0000 2008](https://twitter.com/ChristopherA/status/577630972)
 
 ----
 
@@ -142,7 +149,7 @@ Replying to [@missrogue](https://twitter.com/missrogue/status/581733052)
 
 > I had a similar problem recently when I was trying to figure out how far airports were apart in Japan - gMaps was all in kanjii..
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 10 01:20:58 +0000 2008](https://twitter.com/ChristopherA/status/581762822)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 10 01:20:58 +0000 2008](https://twitter.com/ChristopherA/status/581762822)
 
 ----
 
@@ -150,13 +157,13 @@ Replying to [@allaboutgeorge](https://twitter.com/allaboutgeorge/status/58198861
 
 > & @NancyWhite That climatic song in the studio in "Once" is particularly interested to me as it is in 5/4 time -- odd time.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 10 08:26:35 +0000 2008](https://twitter.com/ChristopherA/status/582780702)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 10 08:26:35 +0000 2008](https://twitter.com/ChristopherA/status/582780702)
 
 ----
 
 > Wow, MacWorld keynote outline seems real [http://snurl.com/1x20e](http://snurl.com/1x20e)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 10 08:30:36 +0000 2008](https://twitter.com/ChristopherA/status/582791392)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 10 08:30:36 +0000 2008](https://twitter.com/ChristopherA/status/582791392)
 
 ----
 
@@ -164,7 +171,7 @@ Replying to [@ravenzachary](https://twitter.com/ravenzachary/status/582394482)
 
 > Someone had posted an outline of upcoming keynote -- it is still in the history [http://urltea.com/2i7o](http://urltea.com/2i7o)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 10 18:00:24 +0000 2008](https://twitter.com/ChristopherA/status/584452652)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 10 18:00:24 +0000 2008](https://twitter.com/ChristopherA/status/584452652)
 
 ----
 
@@ -172,7 +179,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/584942632)
 
 > Looked a year ago, couldn't find one that had it all. In particular, duplex & color.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 10 21:57:10 +0000 2008](https://twitter.com/ChristopherA/status/585159592)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 10 21:57:10 +0000 2008](https://twitter.com/ChristopherA/status/585159592)
 
 ----
 
@@ -180,7 +187,7 @@ Replying to [@ravenzachary](https://twitter.com/ravenzachary/status/585143402)
 
 > I will be at MacWorld, of course ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 10 23:23:02 +0000 2008](https://twitter.com/ChristopherA/status/585411672)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 10 23:23:02 +0000 2008](https://twitter.com/ChristopherA/status/585411672)
 
 ----
 
@@ -188,7 +195,7 @@ Replying to [@factoryjoe](https://twitter.com/chrismessina/status/588992592)
 
 > When (and where) is the OpenIDDevCamp pre-planning meetup?
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 11 22:05:02 +0000 2008](https://twitter.com/ChristopherA/status/589131402)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 11 22:05:02 +0000 2008](https://twitter.com/ChristopherA/status/589131402)
 
 ----
 
@@ -196,73 +203,73 @@ Replying to [@raines](https://twitter.com/raines/status/586214972)
 
 > Imagine the eco-cohousing possibilities with these! [http://sustain.ca/2007/09/11/movies/](http://sustain.ca/2007/09/11/movies/) Could move your cohousing from site to site
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 11 22:49:02 +0000 2008](https://twitter.com/ChristopherA/status/589245282)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 11 22:49:02 +0000 2008](https://twitter.com/ChristopherA/status/589245282)
 
 ----
 
 > At #OpenIDDevCamp at Six Apart in SF a bit early. Thought I could offer my help.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 12 00:49:16 +0000 2008](https://twitter.com/ChristopherA/status/589541622)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 12 00:49:16 +0000 2008](https://twitter.com/ChristopherA/status/589541622)
 
 ----
 
 > Back at OpenIDDevCamp. Had some good discussions last night on UI issues of endpoints, and on iPhone / OpenID UI issues.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 12 18:17:21 +0000 2008](https://twitter.com/ChristopherA/status/591775912)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 12 18:17:21 +0000 2008](https://twitter.com/ChristopherA/status/591775912)
 
 ----
 
 > Some discussion at #OpenIDDevCamp on the topic of integrating oAuth and OpenID. By adding and OpenID extention to oAuth removes a user step.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 12 22:35:40 +0000 2008](https://twitter.com/ChristopherA/status/592354242)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 12 22:35:40 +0000 2008](https://twitter.com/ChristopherA/status/592354242)
 
 ----
 
 > Worked with @jsmarr on a couple of plaxo bugs. Apparently everyone that is already on Plaxo, and a link to me on LinkedIn, got an email.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 12 22:36:58 +0000 2008](https://twitter.com/ChristopherA/status/592357082)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 12 22:36:58 +0000 2008](https://twitter.com/ChristopherA/status/592357082)
 
 ----
 
 > I don't invite people to social networks, I only connect to people who already have accounts on that network.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 12 22:37:57 +0000 2008](https://twitter.com/ChristopherA/status/592359082)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 12 22:37:57 +0000 2008](https://twitter.com/ChristopherA/status/592359082)
 
 ----
 
 > Did some wiki gardening to add info on OpenID 2.0 delegation [http://wiki.openid.net/Delegation](http://wiki.openid.net/Delegation) -- made christophera.lifewithalacrity.com del
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 12 23:44:13 +0000 2008](https://twitter.com/ChristopherA/status/592504252)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 12 23:44:13 +0000 2008](https://twitter.com/ChristopherA/status/592504252)
 
 ----
 
 > Discussing about using OpenID for data discovery, for instance, my rel=me hcard info, or services discovery, my calend services is google.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jan 13 00:38:02 +0000 2008](https://twitter.com/ChristopherA/status/592625452)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jan 13 00:38:02 +0000 2008](https://twitter.com/ChristopherA/status/592625452)
 
 ----
 
 > Running late for #OpenIDDevCamp -- heading out now from Berkeley.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jan 13 19:01:40 +0000 2008](https://twitter.com/ChristopherA/status/594919242)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jan 13 19:01:40 +0000 2008](https://twitter.com/ChristopherA/status/594919242)
 
 ----
 
 > Talking with Tantek about TZ in microformats -- issue of putting just -08:00 or putting in more info, i.e. olsen value "America/Los Angeles"
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 03:10:47 +0000 2008](https://twitter.com/ChristopherA/status/596063652)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 03:10:47 +0000 2008](https://twitter.com/ChristopherA/status/596063652)
 
 ----
 
 > Tantek was amused by me using del.cio.us as my end point of for my xfolk tags, i.e. &lt;a rel="tag" href= [http://del.icio.us/tag/tag"&gt](http://del.icio.us/tag/tag"&gt) ...
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 03:33:05 +0000 2008](https://twitter.com/ChristopherA/status/596117492)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 03:33:05 +0000 2008](https://twitter.com/ChristopherA/status/596117492)
 
 ----
 
 > Finished up OpenIDDevCamp and back at home. It was an excellent "working" conference ala MacHack, rather then a more "scan" oriented one.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 06:52:16 +0000 2008](https://twitter.com/ChristopherA/status/596570172)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 06:52:16 +0000 2008](https://twitter.com/ChristopherA/status/596570172)
 
 ----
 
@@ -270,7 +277,7 @@ Replying to [@t](https://twitter.com/t/status/595569332)
 
 > just a note to you about how myOpenID's hcard made the same decision independently about the TZ value to not put -08:00 and only put text
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 06:53:36 +0000 2008](https://twitter.com/ChristopherA/status/596572612)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 06:53:36 +0000 2008](https://twitter.com/ChristopherA/status/596572612)
 
 ----
 
@@ -278,7 +285,7 @@ Replying to [@kevinmarks](https://twitter.com/kevinmarks/status/596593282)
 
 > Actually, what we were talking about was "America/Los Angeles" which can be looked up, rather then "-08:00" which may not be PDT
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 07:05:53 +0000 2008](https://twitter.com/ChristopherA/status/596601632)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 07:05:53 +0000 2008](https://twitter.com/ChristopherA/status/596601632)
 
 ----
 
@@ -286,13 +293,13 @@ Replying to [@kevinmarks](https://twitter.com/kevinmarks/status/596593282)
 
 > The problem is that vCard, and thus hCard, say use "-08:00", without context of daylight or not. Now OpenID sreg uses it too.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 07:07:00 +0000 2008](https://twitter.com/ChristopherA/status/596604282)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 07:07:00 +0000 2008](https://twitter.com/ChristopherA/status/596604282)
 
 ----
 
 > I had some good discussions today at #OpenIDDevCamp re: #dataportability and dataportablity.org's recent publicity this week.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 07:08:52 +0000 2008](https://twitter.com/ChristopherA/status/596608362)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 07:08:52 +0000 2008](https://twitter.com/ChristopherA/status/596608362)
 
 ----
 
@@ -300,7 +307,7 @@ Replying to [@kevinmarks and @t](https://twitter.com/kevinmarks/status/596593282
 
 > there is some good discussion on this at [http://tinyurl.com/2afo2e](http://tinyurl.com/2afo2e)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 07:13:41 +0000 2008](https://twitter.com/ChristopherA/status/596618092)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 07:13:41 +0000 2008](https://twitter.com/ChristopherA/status/596618092)
 
 ----
 
@@ -308,7 +315,7 @@ Replying to [@kevinmarks and @t](https://twitter.com/kevinmarks/status/596593282
 
 > Another interesting reference, and more current [http://tinyurl.com/2z7cza](http://tinyurl.com/2z7cza)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 07:17:17 +0000 2008](https://twitter.com/ChristopherA/status/596625382)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 07:17:17 +0000 2008](https://twitter.com/ChristopherA/status/596625382)
 
 ----
 
@@ -316,7 +323,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/596761692)
 
 > The thing is that TZ is typically put on static pages, so the tz of -8 might be accurate when posted, but not read.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 08:23:55 +0000 2008](https://twitter.com/ChristopherA/status/596771412)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 08:23:55 +0000 2008](https://twitter.com/ChristopherA/status/596771412)
 
 ----
 
@@ -324,7 +331,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/596761692)
 
 > The Olson Time Zone database at ftp://elsie.nci.nih.gov/pub/ however is kept up to date. So TZ will be correct using it.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 08:26:08 +0000 2008](https://twitter.com/ChristopherA/status/596776152)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 08:26:08 +0000 2008](https://twitter.com/ChristopherA/status/596776152)
 
 ----
 
@@ -332,7 +339,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/596761692)
 
 > So as long as you put "America/Los Angeles" or "-08:00; America/Los Angeles", and the app get the Olson DB, time zone will work.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 08:29:08 +0000 2008](https://twitter.com/ChristopherA/status/596783022)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 08:29:08 +0000 2008](https://twitter.com/ChristopherA/status/596783022)
 
 ----
 
@@ -340,7 +347,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/596761692)
 
 > Of course, as @t points out, in a perfect world, TZ in an hcard should dynamically refer to where you truly are. But 99.9 are static
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 08:32:13 +0000 2008](https://twitter.com/ChristopherA/status/596790232)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 08:32:13 +0000 2008](https://twitter.com/ChristopherA/status/596790232)
 
 ----
 
@@ -348,7 +355,7 @@ Replying to [@t](https://twitter.com/t/status/596809262)
 
 > I'm frustrated with ma.gnolia.com because I can't import my del.icio.us links because they don't respect my private links.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 08:56:08 +0000 2008](https://twitter.com/ChristopherA/status/596841652)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 08:56:08 +0000 2008](https://twitter.com/ChristopherA/status/596841652)
 
 ----
 
@@ -356,7 +363,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/596887682)
 
 > I was mainly speaking of the tz attribute in the microformat hcard, which is suppost to be the zone you want GMT to be displayed in.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 09:24:50 +0000 2008](https://twitter.com/ChristopherA/status/596904592)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 09:24:50 +0000 2008](https://twitter.com/ChristopherA/status/596904592)
 
 ----
 
@@ -364,25 +371,25 @@ Replying to [@jeffpulver](https://twitter.com/jeffpulver/status/597166162)
 
 > Oops, I guess that "Good morning!" means I ought to go to bed. ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 14 11:15:30 +0000 2008](https://twitter.com/ChristopherA/status/597167592)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 14 11:15:30 +0000 2008](https://twitter.com/ChristopherA/status/597167592)
 
 ----
 
 > I've not been able to connect to EDGE all day from iPhone -due to #macworld?
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jan 15 20:19:43 +0000 2008](https://twitter.com/ChristopherA/status/602790042)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 15 20:19:43 +0000 2008](https://twitter.com/ChristopherA/status/602790042)
 
 ----
 
 > Well, my sprint data isn't going to with MacBook air -- too bad the USB evdo r1 modems are so clunky .
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jan 15 20:52:24 +0000 2008](https://twitter.com/ChristopherA/status/602890612)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 15 20:52:24 +0000 2008](https://twitter.com/ChristopherA/status/602890612)
 
 ----
 
 > Back home, got to sleep before meeting with iPhoneDevCamp people at the Yahoo Research offices tomorrow at 9am.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 16 07:26:08 +0000 2008](https://twitter.com/ChristopherA/status/604455372)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 16 07:26:08 +0000 2008](https://twitter.com/ChristopherA/status/604455372)
 
 ----
 
@@ -390,13 +397,13 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/604547262)
 
 > No firewire for MacBook Air is a big concern for me, as I have a lot of firewire drives for doing backup, etc.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 16 08:11:23 +0000 2008](https://twitter.com/ChristopherA/status/604558862)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 16 08:11:23 +0000 2008](https://twitter.com/ChristopherA/status/604558862)
 
 ----
 
 > Off to join iPhoneDevCamp planners at Yahoo research then over to BerkeleyCoworking -- Macworld later today.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 16 16:56:04 +0000 2008](https://twitter.com/ChristopherA/status/606033822)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 16 16:56:04 +0000 2008](https://twitter.com/ChristopherA/status/606033822)
 
 ----
 
@@ -404,7 +411,7 @@ Replying to [@dweinberger](https://twitter.com/dweinberger/status/606477822)
 
 > Twitterific is giving the same "exceeded" error. I think Twitter has lowered limits -- I have changed Twitterific to 15m/check
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 16 19:24:49 +0000 2008](https://twitter.com/ChristopherA/status/606499002)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 16 19:24:49 +0000 2008](https://twitter.com/ChristopherA/status/606499002)
 
 ----
 
@@ -412,7 +419,7 @@ Replying to [@raines](https://twitter.com/raines/status/607522682)
 
 > M snarfed up all of the chocolate you gave me. She liked it ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 17 07:33:09 +0000 2008](https://twitter.com/ChristopherA/status/608479152)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 17 07:33:09 +0000 2008](https://twitter.com/ChristopherA/status/608479152)
 
 ----
 
@@ -420,13 +427,13 @@ Replying to [@adonoho](https://twitter.com/adonoho/status/610147782)
 
 > AirBook cons: no removable battery, no fireware (thus no target disk mode), no ethernet, 1 USB 2.0 port, backup w/o TM difficult.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 17 17:27:28 +0000 2008](https://twitter.com/ChristopherA/status/610222702)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 17 17:27:28 +0000 2008](https://twitter.com/ChristopherA/status/610222702)
 
 ----
 
 > Hmm, tried login w/ new me.yahoo.com OpenID provider login with Plaxo, which uses v2.0, but Yahoo says that Plaxo isn't. Any other 2.0 test?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 17 17:37:29 +0000 2008](https://twitter.com/ChristopherA/status/610256882)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 17 17:37:29 +0000 2008](https://twitter.com/ChristopherA/status/610256882)
 
 ----
 
@@ -434,31 +441,31 @@ Replying to [@jackhodgson](https://twitter.com/jackhodgson/status/610250122)
 
 > I have a sprint card, which I can't use with AirBook, which makes me really wireless. If Apple had included one, it would help.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 17 17:39:14 +0000 2008](https://twitter.com/ChristopherA/status/610262652)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 17 17:39:14 +0000 2008](https://twitter.com/ChristopherA/status/610262652)
 
 ----
 
 > If you are going to be buying a AirBook, make sure you have good time machine backup. No target-disk mode makes recovery difficult.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 17 18:14:32 +0000 2008](https://twitter.com/ChristopherA/status/610377002)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 17 18:14:32 +0000 2008](https://twitter.com/ChristopherA/status/610377002)
 
 ----
 
 > Multitouch on AirBook is cool -- three finger scrolling, two finger pinch zoom rotate.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 17 23:33:34 +0000 2008](https://twitter.com/ChristopherA/status/611340842)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 17 23:33:34 +0000 2008](https://twitter.com/ChristopherA/status/611340842)
 
 ----
 
 > Off to SF to talk data portability.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 18 21:32:55 +0000 2008](https://twitter.com/ChristopherA/status/615081422)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 18 21:32:55 +0000 2008](https://twitter.com/ChristopherA/status/615081422)
 
 ----
 
 > Before I leave SF today, anyone want to meet?
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jan 18 23:40:50 +0000 2008](https://twitter.com/ChristopherA/status/615426452)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 18 23:40:50 +0000 2008](https://twitter.com/ChristopherA/status/615426452)
 
 ----
 
@@ -466,19 +473,19 @@ Replying to [@IdentityWoman](https://twitter.com/IdentityWoman/status/615584632)
 
 > I like Twitteriffic too. Especially with the growl extension, I can kind of keep twitters sidelined for less distraction.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 19 02:45:46 +0000 2008](https://twitter.com/ChristopherA/status/615863412)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 19 02:45:46 +0000 2008](https://twitter.com/ChristopherA/status/615863412)
 
 ----
 
 > I'm too tired from a week of MacWorld for a day of MacCamp -- I'm staying home and recovering.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 19 19:42:58 +0000 2008](https://twitter.com/ChristopherA/status/618087922)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 19 19:42:58 +0000 2008](https://twitter.com/ChristopherA/status/618087922)
 
 ----
 
 > Spent most of day catching up on all of those things that MacWorld delayed.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jan 22 04:52:04 +0000 2008](https://twitter.com/ChristopherA/status/626568982)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 22 04:52:04 +0000 2008](https://twitter.com/ChristopherA/status/626568982)
 
 ----
 
@@ -486,7 +493,7 @@ Replying to [@IdentityWoman](https://twitter.com/IdentityWoman/status/629035772)
 
 > Is there an upcoming page for the next IIW?
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 23 01:16:48 +0000 2008](https://twitter.com/ChristopherA/status/630229662)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 23 01:16:48 +0000 2008](https://twitter.com/ChristopherA/status/630229662)
 
 ----
 
@@ -494,7 +501,7 @@ Replying to [@daveman692](https://twitter.com/daveman692/status/633098992)
 
 > What did you use for your pulse-like feed in your davidrecordan.com site? Is it a plugin?
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 23 18:36:52 +0000 2008](https://twitter.com/ChristopherA/status/633284392)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 23 18:36:52 +0000 2008](https://twitter.com/ChristopherA/status/633284392)
 
 ----
 
@@ -502,19 +509,19 @@ Replying to [@t](https://twitter.com/t/status/631722392)
 
 > I'm looking for any other exemplary hCard enabled personal profile pages so I can complete my christophera.lifewithalacrity.com page.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 23 18:47:39 +0000 2008](https://twitter.com/ChristopherA/status/633317692)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 23 18:47:39 +0000 2008](https://twitter.com/ChristopherA/status/633317692)
 
 ----
 
 > At home, just got off of Identity Commons stewards conference call, gardening some on their wiki.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 23 18:49:38 +0000 2008](https://twitter.com/ChristopherA/status/633323502)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 23 18:49:38 +0000 2008](https://twitter.com/ChristopherA/status/633323502)
 
 ----
 
 > Working on clutter. Maybe I'll get that spring cleaning done that I started last spring.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 24 19:47:38 +0000 2008](https://twitter.com/ChristopherA/status/637397512)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 24 19:47:38 +0000 2008](https://twitter.com/ChristopherA/status/637397512)
 
 ----
 
@@ -522,7 +529,7 @@ Replying to [@seanosteen](https://twitter.com/@seanosteen/status/636953212)
 
 > I didn't think I was in the #MacHeadsTheMovie trailer [http://tinyurl.com/3ayvkz](http://tinyurl.com/3ayvkz) but you are right, about 1/2 sec of me.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 24 19:53:24 +0000 2008](https://twitter.com/ChristopherA/status/637412132)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 24 19:53:24 +0000 2008](https://twitter.com/ChristopherA/status/637412132)
 
 ----
 
@@ -530,25 +537,25 @@ Replying to [@seanosteen](https://twitter.com/@seanosteen/status/636953212)
 
 > But only 1/2 sec -- just me raising my hand. That is not me in that kilt ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 24 19:57:08 +0000 2008](https://twitter.com/ChristopherA/status/637422762)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 24 19:57:08 +0000 2008](https://twitter.com/ChristopherA/status/637422762)
 
 ----
 
 > I'm at #noircity, the film noir festival at the Castro Theatre in SF. 20 films in 10 days on the theme of "No happy endings" ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 26 02:22:54 +0000 2008](https://twitter.com/ChristopherA/status/642246892)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 26 02:22:54 +0000 2008](https://twitter.com/ChristopherA/status/642246892)
 
 ----
 
 > I was very impressed on Tufte's thoughs on the iPhone user interface in this video: [http://tinyurl.com/2exo29](http://tinyurl.com/2exo29)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 26 22:24:13 +0000 2008](https://twitter.com/ChristopherA/status/645011022)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 26 22:24:13 +0000 2008](https://twitter.com/ChristopherA/status/645011022)
 
 ----
 
 > Just finished 6th "No Happy Ending" film noir movie at the Castro. Goes great with the rain and gloomy weather ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 28 06:20:32 +0000 2008](https://twitter.com/ChristopherA/status/649574042)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 28 06:20:32 +0000 2008](https://twitter.com/ChristopherA/status/649574042)
 
 ----
 
@@ -556,13 +563,13 @@ Replying to [@ravenzachary](https://twitter.com/ravenzachary/status/651939052)
 
 > That google maps 'promo' video was good -- laughed ;-) [http://tinyurl.com/yvuhr9](http://tinyurl.com/yvuhr9)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jan 28 21:57:46 +0000 2008](https://twitter.com/ChristopherA/status/652414072)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 28 21:57:46 +0000 2008](https://twitter.com/ChristopherA/status/652414072)
 
 ----
 
 > Grrr. gmail appears to be down.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 31 00:17:42 +0000 2008](https://twitter.com/ChristopherA/status/661364452)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 31 00:17:42 +0000 2008](https://twitter.com/ChristopherA/status/661364452)
 
 ----
 
@@ -570,4 +577,4 @@ Replying to [@daveman692](https://twitter.com/daveman692/status/659648842)
 
 > Will actionstreams be available for TypePad? I'd like to add it to www.LifeWithAlacrity.com someplace.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 31 00:23:14 +0000 2008](https://twitter.com/ChristopherA/status/661377402)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 31 00:23:14 +0000 2008](https://twitter.com/ChristopherA/status/661377402)
