--- a/_tweets-md/2008/2008-02-01-tweets.md
+++ b/_tweets-md/2008/2008-02-01-tweets.md
@@ -1,24 +1,31 @@
+---    
+title: "Social Media - February"
+date: "2008-02-29"
+time: 23:59:59 +0000
+---
+
+
 > Getting my stuff together for the Social Graph Fee Camp tomorrow #sgfoocamp08
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 01 08:14:48 +0000 2008](https://twitter.com/ChristopherA/status/665338332)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 01 08:14:48 +0000 2008](https://twitter.com/ChristopherA/status/665338332)
 
 ----
 
 > I'll bring my popular Dunbar Number presentation to #sgfoocamp08 just in case, and I really ought to do some slides on 4 kinds of privacy.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 01 08:19:05 +0000 2008](https://twitter.com/ChristopherA/status/665347352)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 01 08:19:05 +0000 2008](https://twitter.com/ChristopherA/status/665347352)
 
 ----
 
 > Hanging out at o'reilly's #sgfoocamp08 lobby - curious about where to  camp inside.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Feb 02 00:48:45 +0000 2008](https://twitter.com/ChristopherA/status/668282552)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 02 00:48:45 +0000 2008](https://twitter.com/ChristopherA/status/668282552)
 
 ----
 
 > Played werewolf after #sgfoocamp till 3am. Slept in a sleeping bag at the back of one of the conference rooms. Today, lots of social sw talk
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Feb 02 21:13:51 +0000 2008](https://twitter.com/ChristopherA/status/671035562)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 02 21:13:51 +0000 2008](https://twitter.com/ChristopherA/status/671035562)
 
 ----
 
@@ -26,43 +33,43 @@ Replying to [@ravenzachary](https://twitter.com/ravenzachary/status/673396602)
 
 > LinkedIn as a social linking mechanism I agree. However, as a 21st century resume w/endorsements it is powerful.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Feb 03 18:20:02 +0000 2008](https://twitter.com/ChristopherA/status/673406282)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 03 18:20:02 +0000 2008](https://twitter.com/ChristopherA/status/673406282)
 
 ----
 
 > Heading home after #sgfoocamp. Some great portable identity work happening but best part was putting some faces on people.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Feb 03 22:50:52 +0000 2008](https://twitter.com/ChristopherA/status/673989482)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 03 22:50:52 +0000 2008](https://twitter.com/ChristopherA/status/673989482)
 
 ----
 
 > If you've read my Dunbar Number articles you know that I say that it is not = social network size. Answer is 291 [http://tinyurl.com/yp2gt2](http://tinyurl.com/yp2gt2)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Feb 04 05:11:47 +0000 2008](https://twitter.com/ChristopherA/status/675102502)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 04 05:11:47 +0000 2008](https://twitter.com/ChristopherA/status/675102502)
 
 ----
 
 > At www.BerkeleyCoworking.com -- catching up on some lagging tasks from last week.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Feb 11 23:34:43 +0000 2008](https://twitter.com/ChristopherA/status/701427762)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 11 23:34:43 +0000 2008](https://twitter.com/ChristopherA/status/701427762)
 
 ----
 
 > Lazyweb / hoosgot request: Any advice for a 3 day stay in Lisbon Portugal during May?
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Feb 11 23:41:24 +0000 2008](https://twitter.com/ChristopherA/status/701448972)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 11 23:41:24 +0000 2008](https://twitter.com/ChristopherA/status/701448972)
 
 ----
 
 > Anyone have any comments for me about eComm 2008 conference on March 12-14? I've got some questions.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Feb 13 06:34:47 +0000 2008](https://twitter.com/ChristopherA/status/706403772)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 13 06:34:47 +0000 2008](https://twitter.com/ChristopherA/status/706403772)
 
 ----
 
 > Finishing off a great weekend of LARPing at Dundracon in San Ramon. 12 LARPs run, played in four.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Feb 18 23:24:20 +0000 2008](https://twitter.com/ChristopherA/status/728207112)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 18 23:24:20 +0000 2008](https://twitter.com/ChristopherA/status/728207112)
 
 ----
 
@@ -70,28 +77,28 @@ Replying to [@factoryjoe](https://twitter.com/chrismessina/status/736548932)
 
 > Tell them we have desks to rent in Berkeley near BART ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Feb 20 22:37:00 +0000 2008](https://twitter.com/ChristopherA/status/736750852)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 20 22:37:00 +0000 2008](https://twitter.com/ChristopherA/status/736750852)
 
 ----
 
 > This week has been a major sidetrack from my technical side. Did LARPs last weekend, and looking for publisher for a graphic novel tomorrow.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 22 06:32:18 +0000 2008](https://twitter.com/ChristopherA/status/742641972)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 22 06:32:18 +0000 2008](https://twitter.com/ChristopherA/status/742641972)
 
 ----
 
 > Did do some work on dataportability.org work this week, participated in steering committee conf. call, read and commented some on lists.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Feb 22 06:34:45 +0000 2008](https://twitter.com/ChristopherA/status/742648632)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 22 06:34:45 +0000 2008](https://twitter.com/ChristopherA/status/742648632)
 
 ----
 
 > Frustrated that the iPhone SDK may be delayed, especially as I'm supposed to be talking about it in two weeks at the eComm conference.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Feb 27 18:20:24 +0000 2008](https://twitter.com/ChristopherA/status/764096746)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 27 18:20:24 +0000 2008](https://twitter.com/ChristopherA/status/764096746)
 
 ----
 
 > Supposedly there will be an announcement regarding the iPhone SDK on March 6th, however, it sounds a bit vague. Will it ship then?
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Feb 27 20:51:33 +0000 2008](https://twitter.com/ChristopherA/status/764152742)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 27 20:51:33 +0000 2008](https://twitter.com/ChristopherA/status/764152742)
