--- a/_tweets-md/2008/2008-03-01-tweets.md
+++ b/_tweets-md/2008/2008-03-01-tweets.md
@@ -1,36 +1,42 @@
+---    
+title: "Social Media - March"
+date: "2008-03-31"
+time: 23:59:59 +0000
+---
+
 > Had a great afternoon jamming with other hang drum owners. Compared hangs, shared tips. One guy flew down from North Dakota just to join us!
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Mar 02 07:39:47 +0000 2008](https://twitter.com/ChristopherA/status/765591283)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Mar 02 07:39:47 +0000 2008](https://twitter.com/ChristopherA/status/765591283)
 
 ----
 
 > For M's birthday we spent the day walking and dining through San Francisco. We barted to the Embarquedero and had a clam chowder...
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 06 03:51:48 +0000 2008](https://twitter.com/ChristopherA/status/767366304)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 06 03:51:48 +0000 2008](https://twitter.com/ChristopherA/status/767366304)
 
 ----
 
 > ...then we quested for wild parrots while climbing Greenwich and filbert steps, finding them finally at the very top next to Coit Tower.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 06 03:53:56 +0000 2008](https://twitter.com/ChristopherA/status/767366995)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 06 03:53:56 +0000 2008](https://twitter.com/ChristopherA/status/767366995)
 
 ----
 
 > ...we then had panini at Mario's Bohemian Cigar Store, cable car'ed to Union Square for a Rolling Stones photo exhibit...
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 06 03:55:11 +0000 2008](https://twitter.com/ChristopherA/status/767367420)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 06 03:55:11 +0000 2008](https://twitter.com/ChristopherA/status/767367420)
 
 ----
 
 > ...and ended day in SF with a visit to the new Blue Bottle Cafe (M's new favorite coffee brewer), and travelled home on the Oakland ferry...
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 06 03:56:21 +0000 2008](https://twitter.com/ChristopherA/status/767367825)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 06 03:56:21 +0000 2008](https://twitter.com/ChristopherA/status/767367825)
 
 ----
 
 > ... Overall a great fun day for both of us. Now time to sit down to a bourbon and coke and watch a old-time movie and then off to sleep.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 06 03:58:41 +0000 2008](https://twitter.com/ChristopherA/status/767368637)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 06 03:58:41 +0000 2008](https://twitter.com/ChristopherA/status/767368637)
 
 ----
 
@@ -38,31 +44,31 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/767682563)
 
 > the right mouse button is available on macs using windows. Just put second finger on trackpad and click the single button for right.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 06 19:20:13 +0000 2008](https://twitter.com/ChristopherA/status/767682574)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 06 19:20:13 +0000 2008](https://twitter.com/ChristopherA/status/767682574)
 
 ----
 
 > Started companion site to iPhoneWebDev called iPhoneOsCoders -- subscribe at [http://groups.google.com/group/iphoneoscoders](http://groups.google.com/group/iphoneoscoders)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Mar 07 08:53:50 +0000 2008](https://twitter.com/ChristopherA/status/767943994)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 07 08:53:50 +0000 2008](https://twitter.com/ChristopherA/status/767943994)
 
 ----
 
 > Videos from jams at our first Berkeley Hang Out [http://tinyurl.com/2bzk4w](http://tinyurl.com/2bzk4w) [http://tinyurl.com/yssny6](http://tinyurl.com/yssny6) [http://tinyurl.com/25sazo](http://tinyurl.com/25sazo)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Mar 07 17:40:17 +0000 2008](https://twitter.com/ChristopherA/status/768137648)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 07 17:40:17 +0000 2008](https://twitter.com/ChristopherA/status/768137648)
 
 ----
 
 > Urgh. Safari crashed after attempting to download the iPhone SDK all night. Had 6 hours remaining, now I don't know.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Mar 07 18:35:42 +0000 2008](https://twitter.com/ChristopherA/status/768160120)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 07 18:35:42 +0000 2008](https://twitter.com/ChristopherA/status/768160120)
 
 ----
 
 > I was quoted in Technology Review about the new iPhone SDK [http://tinyurl.com/3c46wu](http://tinyurl.com/3c46wu)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Mar 10 22:57:24 +0000 2008](https://twitter.com/ChristopherA/status/769545170)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Mar 10 22:57:24 +0000 2008](https://twitter.com/ChristopherA/status/769545170)
 
 ----
 
@@ -70,7 +76,7 @@ Replying to [@factoryjoe](https://twitter.com/chrismessina/status/769989132)
 
 > I prefer BSD.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Mar 11 19:42:14 +0000 2008](https://twitter.com/ChristopherA/status/769998380)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Mar 11 19:42:14 +0000 2008](https://twitter.com/ChristopherA/status/769998380)
 
 ----
 
@@ -78,19 +84,19 @@ Replying to [@factoryjoe](https://twitter.com/chrismessina/status/769989132)
 
 > I don't understand where the content for tofu is from. the Web? RSS? Also, are you using the 2.0 alpha or the 1.3 version?
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Mar 11 19:48:14 +0000 2008](https://twitter.com/ChristopherA/status/770000975)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Mar 11 19:48:14 +0000 2008](https://twitter.com/ChristopherA/status/770000975)
 
 ----
 
 > Setting up M's new mac book pro (a birthday gift) -- her old machine is an old black PowerBook G3 and was getting long in tooth.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Mar 12 05:39:41 +0000 2008](https://twitter.com/ChristopherA/status/770219680)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 12 05:39:41 +0000 2008](https://twitter.com/ChristopherA/status/770219680)
 
 ----
 
 > Just got an Apple Time Capsule for doing Time Machine backups. Puzzling it out. I am disappointed they removed AirTunes from these guys.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 13 03:57:09 +0000 2008](https://twitter.com/ChristopherA/status/770725033)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 13 03:57:09 +0000 2008](https://twitter.com/ChristopherA/status/770725033)
 
 ----
 
@@ -98,25 +104,25 @@ Replying to [@NancyWhite](https://twitter.com/NancyWhite/status/770721102)
 
 > Over time folksonomies become taxonomies, so I say blend.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 13 03:58:44 +0000 2008](https://twitter.com/ChristopherA/status/770725504)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 13 03:58:44 +0000 2008](https://twitter.com/ChristopherA/status/770725504)
 
 ----
 
 > Today: first berkeley breakfast cabal at Saul's, then head down to eComm 2008.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 13 14:57:50 +0000 2008](https://twitter.com/ChristopherA/status/770944923)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 13 14:57:50 +0000 2008](https://twitter.com/ChristopherA/status/770944923)
 
 ----
 
 > I'm speaking at ecomm2008 on the topic of the iPhone SDK today at 3:15, and am on panel "what will drive wireless information" 2pm Friday.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 13 15:12:32 +0000 2008](https://twitter.com/ChristopherA/status/770952908)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 13 15:12:32 +0000 2008](https://twitter.com/ChristopherA/status/770952908)
 
 ----
 
 > At Computer History Museum for eComm2008 - unfortunately wifi not working. A problem for future conferences here, like IIW.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 13 18:26:37 +0000 2008](https://twitter.com/ChristopherA/status/771049189)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 13 18:26:37 +0000 2008](https://twitter.com/ChristopherA/status/771049189)
 
 ----
 
@@ -124,70 +130,70 @@ Replying to [@stuarthenshall](https://twitter.com/stuarthenshall/status/77105652
 
 > I'd be glad to catch up -- lunch table at eComm 2008?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 13 18:52:03 +0000 2008](https://twitter.com/ChristopherA/status/771059683)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 13 18:52:03 +0000 2008](https://twitter.com/ChristopherA/status/771059683)
 
 ----
 
 > First impressions of eComm 2008 -- should have been an unconference. Doing lots of 15min speakers in series = not enough time for questions.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 13 19:01:33 +0000 2008](https://twitter.com/ChristopherA/status/771063791)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 13 19:01:33 +0000 2008](https://twitter.com/ChristopherA/status/771063791)
 
 ----
 
 > Talked with Valerie at Computer History Museum about doing iPhoneDevCamp there on May 18-19th. Possible, but we'll need a serious sponsor.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 13 20:43:23 +0000 2008](https://twitter.com/ChristopherA/status/771105520)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 13 20:43:23 +0000 2008](https://twitter.com/ChristopherA/status/771105520)
 
 ----
 
 > Quoted from my iPhone talk in The Register: [http://tinyurl.com/354vwc](http://tinyurl.com/354vwc)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Mar 14 06:30:05 +0000 2008](https://twitter.com/ChristopherA/status/771321664)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 14 06:30:05 +0000 2008](https://twitter.com/ChristopherA/status/771321664)
 
 ----
 
 > Back at eComm 2008. Watching a live demo of a roomba vacuum running asterisk responding to cell phone call + plants phoning home "water me!"
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Mar 14 18:06:58 +0000 2008](https://twitter.com/ChristopherA/status/771596657)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 14 18:06:58 +0000 2008](https://twitter.com/ChristopherA/status/771596657)
 
 ----
 
 > Just finished as a panelist on the "innovation" panel at eComm 2008. Good discussion on the future of mobile technology.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Mar 14 22:40:54 +0000 2008](https://twitter.com/ChristopherA/status/771705602)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 14 22:40:54 +0000 2008](https://twitter.com/ChristopherA/status/771705602)
 
 ----
 
 > I've had twin problems with macs this week. Dying battery on portable caused crashes, and bad hard drive on Mac Pro is making desktop pains
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 20 23:31:18 +0000 2008](https://twitter.com/ChristopherA/status/774684478)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 20 23:31:18 +0000 2008](https://twitter.com/ChristopherA/status/774684478)
 
 ----
 
 > I'm at #citizenspace in SF, before heading over to Six Apart for #dataportability.org meeting. Anyone up for dinner tonight?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 20 23:32:35 +0000 2008](https://twitter.com/ChristopherA/status/774684939)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 20 23:32:35 +0000 2008](https://twitter.com/ChristopherA/status/774684939)
 
 ----
 
 > L: Cincinnatti OH -- doing some social web coaching.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Mar 26 00:13:36 +0000 2008](https://twitter.com/ChristopherA/status/777073191)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 26 00:13:36 +0000 2008](https://twitter.com/ChristopherA/status/777073191)
 
 ----
 
 > Lazyweb whosgot request: I have an enterprise client that needs an open source del.icio.us server for behind the firewall. Any suggestions?
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Mar 26 20:19:18 +0000 2008](https://twitter.com/ChristopherA/status/777579613)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 26 20:19:18 +0000 2008](https://twitter.com/ChristopherA/status/777579613)
 
 ----
 
 > Heading back to Cincinatti airport - on my home via SFO.  Good two days of social web coaching accomplished here.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Mar 27 18:42:28 +0000 2008](https://twitter.com/ChristopherA/status/778136238)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 27 18:42:28 +0000 2008](https://twitter.com/ChristopherA/status/778136238)
 
 ----
 
 > Back at home. No delays on highways to/from airports, and flight arrived early. Amazing that I can leave at 5pm and see Sunset over SFO at 7
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Mar 28 04:06:14 +0000 2008](https://twitter.com/ChristopherA/status/778386671)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 28 04:06:14 +0000 2008](https://twitter.com/ChristopherA/status/778386671)
