--- a/_tweets-md/2008/2008-04-01-tweets.md
+++ b/_tweets-md/2008/2008-04-01-tweets.md
@@ -1,51 +1,57 @@
+---    
+title: "Social Media - April"
+date: "2008-04-30"
+time: 23:59:59 +0000
+---
+
 > Are you too tired to get feedback over phone tonight?
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Apr 11 06:15:31 +0000 2008](https://twitter.com/ChristopherA/status/786987538)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 11 06:15:31 +0000 2008](https://twitter.com/ChristopherA/status/786987538)
 
 ----
 
 > Oops, meant that as a d msg - I'm getting too tired ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Apr 11 06:17:00 +0000 2008](https://twitter.com/ChristopherA/status/786988075)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 11 06:17:00 +0000 2008](https://twitter.com/ChristopherA/status/786988075)
 
 ----
 
 > Getting ready for a voyage from Barbados to Lisbon. Traveling with my Mom on a Wind Star vessel. No internet for 14 days ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Apr 16 05:15:00 +0000 2008](https://twitter.com/ChristopherA/status/790069562)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 16 05:15:00 +0000 2008](https://twitter.com/ChristopherA/status/790069562)
 
 ----
 
 > At SFO - heading to St. Thomas Virgin Islands via redeye to Newark.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Apr 17 04:33:51 +0000 2008](https://twitter.com/ChristopherA/status/790859545)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 17 04:33:51 +0000 2008](https://twitter.com/ChristopherA/status/790859545)
 
 ----
 
 > Arrived in St. Thomas. Currently looking over Red Hook Harbor with St. John across the sound.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Apr 17 19:18:55 +0000 2008](https://twitter.com/ChristopherA/status/791313023)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 17 19:18:55 +0000 2008](https://twitter.com/ChristopherA/status/791313023)
 
 ----
 
 > There appears to be Sprint EVDO here -- talked to my Sprint representative and they said there were no charges for Puerto Rico & VI.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Apr 17 19:19:54 +0000 2008](https://twitter.com/ChristopherA/status/791313541)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 17 19:19:54 +0000 2008](https://twitter.com/ChristopherA/status/791313541)
 
 ----
 
 > According to AT&T re my iPhone service, it also uses domestic minutes for the Virgin Islands. Yeah!
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Apr 17 19:25:52 +0000 2008](https://twitter.com/ChristopherA/status/791317285)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 17 19:25:52 +0000 2008](https://twitter.com/ChristopherA/status/791317285)
 
 ----
 
 > Wow, getting 3 bars of EVDO sprint here, getting 5 bars of AT&T. Better then the local POTS service and DSL I bet.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Apr 17 19:27:24 +0000 2008](https://twitter.com/ChristopherA/status/791318177)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 17 19:27:24 +0000 2008](https://twitter.com/ChristopherA/status/791318177)
 
 ----
 
 > At St. Thomas airport getting ready to get on a little Liat pudde jumper. Barbados via stop in Antigua. Then no internet on Wind Star.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Apr 18 18:10:48 +0000 2008](https://twitter.com/ChristopherA/status/792027277)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 18 18:10:48 +0000 2008](https://twitter.com/ChristopherA/status/792027277)
