--- a/_tweets-md/2008/2008-06-01-tweets.md
+++ b/_tweets-md/2008/2008-06-01-tweets.md
@@ -1,54 +1,60 @@
+---    
+title: "Social Media - June"
+date: "2008-06-30"
+time: 23:59:59 +0000
+---
+
 > Getting ready for WWDC -- clearing room on my MacBook Pro, watching some DevCenter videos to update myself, reading some dev docs.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 09 02:31:09 +0000 2008](https://twitter.com/ChristopherA/status/830135959)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 09 02:31:09 +0000 2008](https://twitter.com/ChristopherA/status/830135959)
 
 ----
 
 > At WWDC, in overflow keynote room in spite of being there 1-1/2 hour early.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 09 17:07:09 +0000 2008](https://twitter.com/ChristopherA/status/830628061)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 09 17:07:09 +0000 2008](https://twitter.com/ChristopherA/status/830628061)
 
 ----
 
 > Does it seem from the iPhone demos that the iPhone app store is still a few weeks away? I had hoped sooner, and hopefully I'm wrong.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 09 17:52:32 +0000 2008](https://twitter.com/ChristopherA/status/830665968)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 09 17:52:32 +0000 2008](https://twitter.com/ChristopherA/status/830665968)
 
 ----
 
 > Back at WWDC. Shannon and I have first three chapters of the SDK portion of our "iPhone in Action" book, checking them against sessions.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 10 16:03:01 +0000 2008](https://twitter.com/ChristopherA/status/831443307)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 10 16:03:01 +0000 2008](https://twitter.com/ChristopherA/status/831443307)
 
 ----
 
 > If you are interested in our iPhone book "iPhone in Action: Building Mobile Applications" go to [http://www.manning.com/callen](http://www.manning.com/callen)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 10 16:05:01 +0000 2008](https://twitter.com/ChristopherA/status/831444781)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 10 16:05:01 +0000 2008](https://twitter.com/ChristopherA/status/831444781)
 
 ----
 
 > Yeah! Finally got my iPhone Developer Program approved. Hopefully can now start to build apps to test on iPhones rather then use simulator.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 11 17:41:00 +0000 2008](https://twitter.com/ChristopherA/status/832350379)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 11 17:41:00 +0000 2008](https://twitter.com/ChristopherA/status/832350379)
 
 ----
 
 > just posted a project to ScriptLance [http://www.scriptlance.com/projects/1213289667.shtml](http://www.scriptlance.com/projects/1213289667.shtml) for a pseudoanonymous ephemeral location info.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 12 19:08:20 +0000 2008](https://twitter.com/ChristopherA/status/833262453)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 12 19:08:20 +0000 2008](https://twitter.com/ChristopherA/status/833262453)
 
 ----
 
 > I open to working with others on a better spec for it. Think twitter for locations rather then user ids, using Google App Engine.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 12 19:09:57 +0000 2008](https://twitter.com/ChristopherA/status/833263470)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 12 19:09:57 +0000 2008](https://twitter.com/ChristopherA/status/833263470)
 
 ----
 
 > Is there a technical name for the green/red/yellow cards that Jerry's Group uses during conferences for the audience to show approval/disap?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 12 22:34:17 +0000 2008](https://twitter.com/ChristopherA/status/833391082)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 12 22:34:17 +0000 2008](https://twitter.com/ChristopherA/status/833391082)
 
 ----
 
@@ -56,31 +62,31 @@ Replying to [@lazyweb](https://twitter.com/lazyweb/status/119941802)
 
 > Have iPhone Dev Cert, looking for more good ideas for free and $0.99 iPhone apps to rapid prototype for iPhone appstore launch.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 12 22:49:40 +0000 2008](https://twitter.com/ChristopherA/status/833400426)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 12 22:49:40 +0000 2008](https://twitter.com/ChristopherA/status/833400426)
 
 ----
 
 > First iPhone SDK app I'll put in store will be a free red green card app as per [http://tinyurl.com/5tumvv](http://tinyurl.com/5tumvv)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 12 22:56:40 +0000 2008](https://twitter.com/ChristopherA/status/833404561)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 12 22:56:40 +0000 2008](https://twitter.com/ChristopherA/status/833404561)
 
 ----
 
 > I talked some people into doing a web based on at iPhoneDevCamp last year, but web wasn't reliable enough.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 12 22:57:22 +0000 2008](https://twitter.com/ChristopherA/status/833404930)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 12 22:57:22 +0000 2008](https://twitter.com/ChristopherA/status/833404930)
 
 ----
 
 > Have simple red:green app working on iPhone, implementing Jerry's conference moderation cards. But no good icon, anyone have any ideas?
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 16 21:27:53 +0000 2008](https://twitter.com/ChristopherA/status/836317808)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 16 21:27:53 +0000 2008](https://twitter.com/ChristopherA/status/836317808)
 
 ----
 
 > No Supernova for me this year. I'm tired of speaker-in-the-front conferences. Even WWDC would have benefitted from an unconference day.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 16 21:29:39 +0000 2008](https://twitter.com/ChristopherA/status/836319022)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 16 21:29:39 +0000 2008](https://twitter.com/ChristopherA/status/836319022)
 
 ----
 
@@ -88,7 +94,7 @@ Replying to [@ccarfi](https://twitter.com/ccarfi/status/836318840)
 
 > I do use the red:green colon from the graphic in the about box, but the text red:green didn't work (too wide). Not sure about colons
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 16 21:31:09 +0000 2008](https://twitter.com/ChristopherA/status/836320111)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 16 21:31:09 +0000 2008](https://twitter.com/ChristopherA/status/836320111)
 
 ----
 
@@ -96,7 +102,7 @@ Replying to [@sharakarasic](https://twitter.com/sharakarasic/status/838183652)
 
 > Thanks for all the twitter updates re: ocu2008 and for taking notes on my sessions!
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 19 00:28:41 +0000 2008](https://twitter.com/ChristopherA/status/838235156)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 19 00:28:41 +0000 2008](https://twitter.com/ChristopherA/status/838235156)
 
 ----
 
@@ -104,67 +110,67 @@ Replying to [@lazyweb](https://twitter.com/lazyweb/status/119941802)
 
 > Any topnotch Python coders out there interested in writing a Google App Engine ephemeral locality service? Have budget, no coders.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 19 07:18:21 +0000 2008](https://twitter.com/ChristopherA/status/838459533)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 19 07:18:21 +0000 2008](https://twitter.com/ChristopherA/status/838459533)
 
 ----
 
 > Listened to over 40 eclectic musicians installled in niches at Garden of Memory Summer Solstice Concert in a Julia Morgan columbarium.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 22 06:36:52 +0000 2008](https://twitter.com/ChristopherA/status/840755648)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 22 06:36:52 +0000 2008](https://twitter.com/ChristopherA/status/840755648)
 
 ----
 
 > I spent most of the day preparing for a presentation that I'm giving in Korea this week for Social Media training for execs. Leave tomorrow.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 23 00:30:42 +0000 2008](https://twitter.com/ChristopherA/status/841250722)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 23 00:30:42 +0000 2008](https://twitter.com/ChristopherA/status/841250722)
 
 ----
 
 > L:SFO waiting in a United Boeing 777 for trip to Seoul, South Korea. Speaking at a conference of executive trainers on Thursday. Client=JnJ.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 23 19:58:17 +0000 2008](https://twitter.com/ChristopherA/status/841898750)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 23 19:58:17 +0000 2008](https://twitter.com/ChristopherA/status/841898750)
 
 ----
 
 > L:The Ritz-Carlton, Seoul. I didn't arrive in time for the group activity, so I wandered the neighborhood and ate local. Koreans like spicy!
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 24 11:53:17 +0000 2008](https://twitter.com/ChristopherA/status/842391286)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 24 11:53:17 +0000 2008](https://twitter.com/ChristopherA/status/842391286)
 
 ----
 
 > I've been doing last minute prep for my presentation tomorrow. Thankfully someone loaned me a projector to test on so I can avoid glitches.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 25 08:52:07 +0000 2008](https://twitter.com/ChristopherA/status/843111316)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 25 08:52:07 +0000 2008](https://twitter.com/ChristopherA/status/843111316)
 
 ----
 
 > My blog post on why I'm in Seoul, South Korea this week: [http://tinyurl.com/5qux7o](http://tinyurl.com/5qux7o)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 25 08:53:14 +0000 2008](https://twitter.com/ChristopherA/status/843111788)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 25 08:53:14 +0000 2008](https://twitter.com/ChristopherA/status/843111788)
 
 ----
 
 > I now own collaborativetools.com and collaborativepatterns.com -- hmm, what to do with them.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 25 08:58:20 +0000 2008](https://twitter.com/ChristopherA/status/843114093)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 25 08:58:20 +0000 2008](https://twitter.com/ChristopherA/status/843114093)
 
 ----
 
 > I've been working on a public API for an ephemeral location service, suitable (but exclusively) for iPhone apps, allowing pseudoanonymity.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 26 03:39:05 +0000 2008](https://twitter.com/ChristopherA/status/843843918)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 26 03:39:05 +0000 2008](https://twitter.com/ChristopherA/status/843843918)
 
 ----
 
 > If you are interested in an advance look at this ephemeral location API, let me know. Hope to have a first public draft soon.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 26 03:39:52 +0000 2008](https://twitter.com/ChristopherA/status/843844324)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 26 03:39:52 +0000 2008](https://twitter.com/ChristopherA/status/843844324)
 
 ----
 
 > Just finished my social web presention. Yeah!
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 26 08:04:41 +0000 2008](https://twitter.com/ChristopherA/status/843967288)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 26 08:04:41 +0000 2008](https://twitter.com/ChristopherA/status/843967288)
 
 ----
 
@@ -172,28 +178,28 @@ Replying to [@dom](https://twitter.com/dom/status/844531600)
 
 > BTW, I am a great fan of Nickel Creek. I like Chris Thile's other bluegrass work, but the last Nickel Creek album blew my socks off.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 27 07:51:45 +0000 2008](https://twitter.com/ChristopherA/status/844784827)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 27 07:51:45 +0000 2008](https://twitter.com/ChristopherA/status/844784827)
 
 ----
 
 > Hmm, NYT mentions @berkeleycowork [http://tinyurl.com/5v92ol](http://tinyurl.com/5v92ol)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 27 13:22:55 +0000 2008](https://twitter.com/ChristopherA/status/844948262)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 27 13:22:55 +0000 2008](https://twitter.com/ChristopherA/status/844948262)
 
 ----
 
 > At Incheon Seoul Airport, waiting for my flight back to SFO. Leave Monday at 2:10pm, but arrive Monday at 8:30am. Hopefully can fall asleep.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 30 02:35:28 +0000 2008](https://twitter.com/ChristopherA/status/846590910)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 30 02:35:28 +0000 2008](https://twitter.com/ChristopherA/status/846590910)
 
 ----
 
 > Arrived SFO, slept reasonably well so hopefully that will reduce jetlag.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 30 15:27:44 +0000 2008](https://twitter.com/ChristopherA/status/846954692)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 30 15:27:44 +0000 2008](https://twitter.com/ChristopherA/status/846954692)
 
 ----
 
 > In spite off efforts to avoid it, I had to nap today. Transitioning from Korea time back to Pacific time is tough.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 01 04:52:41 +0000 2008](https://twitter.com/ChristopherA/status/847399977)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 01 04:52:41 +0000 2008](https://twitter.com/ChristopherA/status/847399977)
