--- a/_tweets-md/2008/2008-09-01-tweets.md
+++ b/_tweets-md/2008/2008-09-01-tweets.md
@@ -1,72 +1,78 @@
+---    
+title: "Social Media - September"
+date: "2008-09-30"
+time: 23:59:59 +0000
+---
+
 > Hosed my iPhone AGAIN after adding an app. This using the 2.1 beta firmware. Apple still hasn't solved this problem with installing apps.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 03 05:54:45 +0000 2008](https://twitter.com/ChristopherA/status/907760797)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 03 05:54:45 +0000 2008](https://twitter.com/ChristopherA/status/907760797)
 
 ----
 
 > Picking up my Mom, spending the weekend and Monday with her here in the bay area.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 04 22:46:28 +0000 2008](https://twitter.com/ChristopherA/status/909981308)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 04 22:46:28 +0000 2008](https://twitter.com/ChristopherA/status/909981308)
 
 ----
 
 > I posted a listing for a part-time assistant on Craig's List, and asked for people who wanted part time work because of other passions.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Sep 05 22:28:48 +0000 2008](https://twitter.com/ChristopherA/status/911266567)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 05 22:28:48 +0000 2008](https://twitter.com/ChristopherA/status/911266567)
 
 ----
 
 > In response to that listing, I got lots of resumes from what seem like some very very interesting people. I'm glad I advertised that way.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Sep 05 22:29:51 +0000 2008](https://twitter.com/ChristopherA/status/911267481)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 05 22:29:51 +0000 2008](https://twitter.com/ChristopherA/status/911267481)
 
 ----
 
 > I had hoped to be able to attend C4, but all the invites came and went during the middle of iPhoneDevCamp. Maybe next year.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Sep 05 22:53:21 +0000 2008](https://twitter.com/ChristopherA/status/911287716)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 05 22:53:21 +0000 2008](https://twitter.com/ChristopherA/status/911287716)
 
 ----
 
 > Testing out the new Twitteriffic update. I never liked how the previous version handled privacy in location updates.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Sep 06 01:04:58 +0000 2008](https://twitter.com/ChristopherA/status/911393426)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 06 01:04:58 +0000 2008](https://twitter.com/ChristopherA/status/911393426)
 
 ----
 
 > Definitely like the Twitteriffic location status update better. I don't mind it saying my city when I'm at home but M would prefer not exact
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Sep 06 01:08:30 +0000 2008](https://twitter.com/ChristopherA/status/911396175)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 06 01:08:30 +0000 2008](https://twitter.com/ChristopherA/status/911396175)
 
 ----
 
 > At Nomad Cafe, Oakland  [http://tinyurl.com/6fud3r](http://tinyurl.com/6fud3r)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Sep 06 03:39:48 +0000 2008](https://twitter.com/ChristopherA/status/911511113)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 06 03:39:48 +0000 2008](https://twitter.com/ChristopherA/status/911511113)
 
 ----
 
 > There is a benefit here for the Nomad Cafe as they were robbed in the recent crime spree in North Oakland.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Sep 06 03:42:54 +0000 2008](https://twitter.com/ChristopherA/status/911513192)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 06 03:42:54 +0000 2008](https://twitter.com/ChristopherA/status/911513192)
 
 ----
 
 > Kevin Beadled Band playing at Nomad Cafe, Oakland [http://twitpic.com/aedv](http://twitpic.com/aedv)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Sep 06 03:44:32 +0000 2008](https://twitter.com/ChristopherA/status/911514321)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 06 03:44:32 +0000 2008](https://twitter.com/ChristopherA/status/911514321)
 
 ----
 
 > Interviewing people this week for part-time personal assistant and for a comic book artist. Interesting juxtaposition of new people.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Sep 08 21:01:55 +0000 2008](https://twitter.com/ChristopherA/status/914296852)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 08 21:01:55 +0000 2008](https://twitter.com/ChristopherA/status/914296852)
 
 ----
 
 > I have a draft for a blog post "Community by the Numbers" which consolidates my thoughts on group size issues. Ping if you'd advance look.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Sep 08 21:11:31 +0000 2008](https://twitter.com/ChristopherA/status/914306560)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 08 21:11:31 +0000 2008](https://twitter.com/ChristopherA/status/914306560)
 
 ----
 
@@ -74,7 +80,7 @@ Replying to [@adamengst](https://twitter.com/adamengst/status/914412412)
 
 > I've had great luck when I emphasize that I'm looking for someone who WANTS a part-time position for other reasons, such as art.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Sep 08 23:53:10 +0000 2008](https://twitter.com/ChristopherA/status/914454790)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 08 23:53:10 +0000 2008](https://twitter.com/ChristopherA/status/914454790)
 
 ----
 
@@ -82,19 +88,19 @@ Replying to [@adamengst](https://twitter.com/adamengst/status/914412412)
 
 > They may not stay as long because their passions are elsewhere, but they tend to be solid people when that info is up front.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Sep 08 23:54:10 +0000 2008](https://twitter.com/ChristopherA/status/914455698)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 08 23:54:10 +0000 2008](https://twitter.com/ChristopherA/status/914455698)
 
 ----
 
 > Will be heading over to BerkeleyCoworking soon—meeting some people and interviewing there.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 09 17:50:07 +0000 2008](https://twitter.com/ChristopherA/status/915365413)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 09 17:50:07 +0000 2008](https://twitter.com/ChristopherA/status/915365413)
 
 ----
 
 > Hey, @berkeleycowork folks -- someone send me an updated list of BerkeleyCoworking twitterers?
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 10 05:52:11 +0000 2008](https://twitter.com/ChristopherA/status/916057972)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 10 05:52:11 +0000 2008](https://twitter.com/ChristopherA/status/916057972)
 
 ----
 
@@ -102,61 +108,61 @@ Replying to [@Joi](https://twitter.com/Joi/status/917171104)
 
 > Mobile Sync with Google messed up my address book too. Now I'm back to using other
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 11 19:10:43 +0000 2008](https://twitter.com/ChristopherA/status/917998447)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 11 19:10:43 +0000 2008](https://twitter.com/ChristopherA/status/917998447)
 
 ----
 
 > In SF to have my heart CAT scanned for a new baseline a year-and-a-half since my heart attack. Nothing wrong, just a deep checkup.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 16 19:34:02 +0000 2008](https://twitter.com/ChristopherA/status/923731267)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 16 19:34:02 +0000 2008](https://twitter.com/ChristopherA/status/923731267)
 
 ----
 
 > For those that didn't know I had a heart attack 19 months ago, I'm fine - I was climbing the wall of china 90 days later. A warning though.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 16 21:10:56 +0000 2008](https://twitter.com/ChristopherA/status/923830078)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 16 21:10:56 +0000 2008](https://twitter.com/ChristopherA/status/923830078)
 
 ----
 
 > I'm @citizenspace in SF today after my tests. Taking the opportunity to try to finish this community numbers article with less distractions.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 16 21:12:06 +0000 2008](https://twitter.com/ChristopherA/status/923831248)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 16 21:12:06 +0000 2008](https://twitter.com/ChristopherA/status/923831248)
 
 ----
 
 > Heading out of @CitizenSpace to try out the Transbay H bus - it theoretically goes straight from downtown to 100' from my home door for 3.50
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 16 22:36:44 +0000 2008](https://twitter.com/ChristopherA/status/923913985)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 16 22:36:44 +0000 2008](https://twitter.com/ChristopherA/status/923913985)
 
 ----
 
 > Wow, the Transbay H bus is pretty efficient between my home in Kensington and the SF Bus Terminal. I'll have to try it again.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 16 23:23:16 +0000 2008](https://twitter.com/ChristopherA/status/923956430)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 16 23:23:16 +0000 2008](https://twitter.com/ChristopherA/status/923956430)
 
 ----
 
 > I've tried the delicious bookmark to blog post service at delicious.com but it doesn't seem to work. Anyone other services out there do it?
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 16 23:28:07 +0000 2008](https://twitter.com/ChristopherA/status/923960727)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 16 23:28:07 +0000 2008](https://twitter.com/ChristopherA/status/923960727)
 
 ----
 
 > Cold day in Berkeley. Our September "summer" didn't last too long this year.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 17 18:57:55 +0000 2008](https://twitter.com/ChristopherA/status/924986780)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 17 18:57:55 +0000 2008](https://twitter.com/ChristopherA/status/924986780)
 
 ----
 
 > Just posted &quot;Community by the Numbers, Part One: Group Thresholds&quot; in my blog Life With Alacrity: [http://bit.ly/groupthreshold](http://bit.ly/groupthreshold)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 24 20:58:16 +0000 2008](https://twitter.com/ChristopherA/status/933510218)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 24 20:58:16 +0000 2008](https://twitter.com/ChristopherA/status/933510218)
 
 ----
 
 > Heading off today from OAK to SEA - doing some iPhone consulting.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 25 18:51:23 +0000 2008](https://twitter.com/ChristopherA/status/934735905)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 25 18:51:23 +0000 2008](https://twitter.com/ChristopherA/status/934735905)
 
 ----
 
@@ -164,53 +170,53 @@ Replying to [@schwa](https://twitter.com/@schwa/status/934731224)
 
 > what ad-hoc abuse?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 25 18:53:16 +0000 2008](https://twitter.com/ChristopherA/status/934738098)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 25 18:53:16 +0000 2008](https://twitter.com/ChristopherA/status/934738098)
 
 ----
 
 > At SEA Seattle Airport, waiting for limo to Seattle & Bainbridge Ferry.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 25 23:44:58 +0000 2008](https://twitter.com/ChristopherA/status/935038663)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 25 23:44:58 +0000 2008](https://twitter.com/ChristopherA/status/935038663)
 
 ----
 
 > At Islandwood on Bainbridge Island, WA, listening to the presidential debates with a room of green MBA students.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Sep 27 03:24:05 +0000 2008](https://twitter.com/ChristopherA/status/936729520)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 27 03:24:05 +0000 2008](https://twitter.com/ChristopherA/status/936729520)
 
 ----
 
 > Back home in Berkeley.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Sep 28 00:19:35 +0000 2008](https://twitter.com/ChristopherA/status/937614709)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Sep 28 00:19:35 +0000 2008](https://twitter.com/ChristopherA/status/937614709)
 
 ----
 
 > Waiting for start of How Berkeley Can You Be Parade -  
 >  [http://tinyurl.com/463oco](http://tinyurl.com/463oco)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Sep 28 17:42:00 +0000 2008](https://twitter.com/ChristopherA/status/938287393)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Sep 28 17:42:00 +0000 2008](https://twitter.com/ChristopherA/status/938287393)
 
 ----
 
 > If you want to join us watching this madcap parade, M and I are just east of Milvia on University.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Sep 28 17:44:16 +0000 2008](https://twitter.com/ChristopherA/status/938289125)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Sep 28 17:44:16 +0000 2008](https://twitter.com/ChristopherA/status/938289125)
 
 ----
 
 > Twitteriffic did a terrible job with location URL below - that is where was yesterday. Don't trust twitteriffic's loc abilility it is buggy.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Sep 28 18:20:19 +0000 2008](https://twitter.com/ChristopherA/status/938318743)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Sep 28 18:20:19 +0000 2008](https://twitter.com/ChristopherA/status/938318743)
 
 ----
 
 > 98 photos from the How Berkeley Can You Be? Parade: [http://www.flickr.com/photos/christophera/sets/72157607563460503/](http://www.flickr.com/photos/christophera/sets/72157607563460503/)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Sep 29 02:37:51 +0000 2008](https://twitter.com/ChristopherA/status/938725467)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 29 02:37:51 +0000 2008](https://twitter.com/ChristopherA/status/938725467)
 
 ----
 
 > Beautiful warm afternoon in Mendocino [http://twitpic.com/dzv7](http://twitpic.com/dzv7)   [http://tinyurl.com/4bxkqs](http://tinyurl.com/4bxkqs)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 01 00:50:01 +0000 2008](https://twitter.com/ChristopherA/status/941294687)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 01 00:50:01 +0000 2008](https://twitter.com/ChristopherA/status/941294687)
