--- a/_tweets-md/2008/2008-12-01-tweets.md
+++ b/_tweets-md/2008/2008-12-01-tweets.md
@@ -1,15 +1,21 @@
+---    
+title: "Social Media - December"
+date: "2008-12-31"
+time: 23:59:59 +0000
+---
+
 > Fall colors in Berkeley? Moo! [http://www.flickr.com/photos/christophera/3080843528/](http://www.flickr.com/photos/christophera/3080843528/)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Dec 03 20:40:09 +0000 2008](https://twitter.com/ChristopherA/status/1036852776)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 03 20:40:09 +0000 2008](https://twitter.com/ChristopherA/status/1036852776)
 
 ----
 
 > At Masquer's Theatre in Pt. Richmond, with Chaz, Claire & Erin. Watching the musical "Do I Hear a Waltz" by Rodgers & Sondheim.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Dec 06 03:43:35 +0000 2008](https://twitter.com/ChristopherA/status/1041470936)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Dec 06 03:43:35 +0000 2008](https://twitter.com/ChristopherA/status/1041470936)
 
 ----
 
 > Happy Holidays everyone!
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 25 01:00:57 +0000 2008](https://twitter.com/ChristopherA/status/1077228982)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 25 01:00:57 +0000 2008](https://twitter.com/ChristopherA/status/1077228982)
